###############################################################################
# Setuptools
###############################################################################

[metadata]
name = HK-Comp
description = Computing commands for HK (DIRAC, gfal...)
long_description = file: README.rst
url = https://gitlab.in2p3.fr/hk/computing/hkdirac
license = GPL-3.0-only
license_files = file: LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing

[options]
python_requires = >=3.8
package_dir=
    =src
packages = find:
install_requires =
    DIRAC ~= 7.3.15
    tqdm
    gfal2-python
zip_safe = False
include_package_data = True

[options.package_data]

[options.packages.find]
where=src

[options.extras_require]
server =
    DIRAC[server]
testing =
    mock
    pytest

[options.entry_points]
dirac =
    metadata = HKComp:extension_metadata
# For details on adding additional scripts see
# https://dirac.readthedocs.io/en/integration/DeveloperGuide/AddingNewComponents/DevelopingCommands/index.html
console_scripts =
    # Interfaces
    hk-dms-find-missing-files = HKComp.Interfaces.scripts.hk_dms_find_missing_files:main
    hk-rms-submit-requests = HKComp.Interfaces.scripts.hk_rms_submit_requests:main
    hk-gfal-check = HKComp.Interfaces.scripts.hk_gfal_check:main

###############################################################################
# Linting
###############################################################################

[pycodestyle]
# Pep8 codes:
# E203 - Whitespace before ':' (spaces should be present for list slices)
# E211 - Whitespace before '(' (black incorrectly formats exec when in Python 2 mode)
# E266 - Too many leading '#' for block comment
# E402 - module level import not at top of file (for scripts)
# W503 - line break before binary operator (stupid, complains after or before...)
ignore = E203, E211, E266, E402, W503
# TODO: This should be reduced back to 120 at some point
max_line_length=130